# avrae-discord-mcp

./: .env.example  AGENT.md  Dockerfile  README.md  WORKSTREAM_STATUS.md  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: avrae-to-mcp-skill-translation-checklist.md
src/avrae_mcp_server/: __init__.py  config.py  relay.py  server.py
tests/: test_config.py  test_relay.py  test_server.py
